// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`compile w/ websmith should build foobar-arrow.d.ts with ES2020 and addonsDir 1`] = `
"export declare const getFoobar: (date: Date) => string;
//# sourceMappingURL=foobar-arrow.d.ts.map"
`;

exports[`compile w/ websmith should build foobar-arrow.js with ES2020 and addonsDir 1`] = `
"export const getFoobar = (date) => {
    return foobar(date);
};
const foobar = (date) => {
    return \`foobar \${date.toISOString()}\`;
};
"
`;

exports[`compile w/ websmith should build foobar-function.js with ES2020 and addonsDir 1`] = `
"export function getFoobar(date) {
    return foobar(date);
}
function foobar(date) {
    return \`foobar \${date.toISOString()}\`;
}
"
`;

exports[`compile w/ websmith should build js and d.ts with outDir and noEmit false 1`] = `
"// @annotated()
export const getFoobar = (date) => {
    return foobar(date);
};
const foobar = (date) => {
    return \`foobar \${date.toISOString()}\`;
};
"
`;

exports[`compile w/ websmith should build js and d.ts with outDir and noEmit false 2`] = `
"export declare const getFoobar: (date: Date) => string;
"
`;

exports[`compile w/ websmith should build js and d.ts with tsconfig.json and overriding tsconfig props 1`] = `
"// @annotated()
export const getFoobar = (date) => {
    return foobar(date);
};
const foobar = (date) => {
    return \`foobar \${date.toISOString()}\`;
};
"
`;

exports[`compile w/ websmith should build js and d.ts with tsconfig.json and overriding tsconfig props 2`] = `
"export declare const getFoobar: (date: Date) => string;
//# sourceMappingURL=foobar-arrow.d.ts.map"
`;

exports[`compile w/ websmith should build js and d.ts with tsconfig.json, tsconfig props and overriding profile props 1`] = `
"// @annotated()
export const getFoobar = (date) => {
    return foobar(date);
};
const foobar = (date) => {
    return \`foobar \${date.toISOString()}\`;
};
"
`;

exports[`compile w/ websmith should build js and d.ts with tsconfig.json, tsconfig props and overriding profile props 2`] = `
"export declare const getFoobar: (date: Date) => string;
//# sourceMappingURL=foobar-arrow.d.ts.map"
`;

exports[`compile w/ websmith should build js and d.ts with tsconfig.json, tsconfig props and overriding props in websmith config 1`] = `
"// @annotated()
export const getFoobar = (date) => {
    return foobar(date);
};
const foobar = (date) => {
    return \`foobar \${date.toISOString()}\`;
};
"
`;

exports[`compile w/ websmith should build js and d.ts with tsconfig.json, tsconfig props and overriding props in websmith config 2`] = `
"export declare const getFoobar: (date: Date) => string;
//# sourceMappingURL=foobar-arrow.d.ts.map"
`;

exports[`compile w/ websmith should build js and no d.ts with tsconfig.json 1`] = `
""use strict";
Object.defineProperty(exports, "__esModule", { value: true });
exports.getFoobar = void 0;
// @annotated()
var getFoobar = function (date) {
    return foobar(date);
};
exports.getFoobar = getFoobar;
var foobar = function (date) {
    return "foobar ".concat(date.toISOString());
};
"
`;

exports[`compile w/ websmith should build js and no d.ts with tsconfig.json 2`] = `
"export declare const getFoobar: (date: Date) => string;
//# sourceMappingURL=foobar-arrow.d.ts.map"
`;

exports[`compile w/ websmith should generate additional files with addonDir and one addon selected 1`] = `
"export const getFoobar = (date) => {
    return foobar(date);
};
const foobar = (date) => {
    return \`foobar \${date.toISOString()}\`;
};
"
`;
